--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -26,6 +26,17 @@ body {
         margin-top: 45px;
         background: transparent url('/img/index-bg.png') 0 0 repeat scroll;
     }
+    
+    #productsGrid {
+        h4 { 
+            font-size: 1.5em;
+            color: $ui-blue;
+            font-weight: bold;
+        }
+        .bottom-half {
+            margin-top: 20px
+        }
+    }
 
     #welcomeModal {
         h2 {
@@ -66,6 +77,16 @@ body {
         .modal-dialog {
             width: 562px;
             margin: 30px auto;
-        }
+        }        
     }
+
+    @media (max-width: 730px) {
+        #productsGrid {
+            .bottom-half {
+                margin-top: 5px
+            }
+        }
+        
+    }
+
 }
